--- a/landing-page-angular/src/app/contact/contact.component.html
+++ b/landing-page-angular/src/app/contact/contact.component.html
@@ -1,1 +1,36 @@
-<p>contact works!</p>
+<!-- <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+  <label for="name">Nombre:</label>
+  <input type="text" id="name" formControlName="name" />
+
+  <label for="email">Correo electrónico:</label>
+  <input type="email" id="email" formControlName="email" />
+
+  <button type="submit">Enviar</button>
+</form> -->
+
+<div class="container d-flex justify-content-center">
+  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="name" class="form-label">Name </label>
+      <input type="txt" class="form-control" id="name" formControlName="name" />
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email </label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        formControlName="email"
+      />
+    </div>
+    <div class="text-center">
+      <button
+        type="submit"
+        [disabled]="!contactForm.valid"
+        class="btn btn-primary"
+      >
+        Submit
+      </button>
+    </div>
+  </form>
+</div>
